@@ -13,11 +13,11 @@ import java.util.Date
 
 plugins {
   checkstyle
-  id("com.github.ben-manes.versions") version "0.42.0"
+  id("com.github.ben-manes.versions") version "0.52.0"
   java
   application
-  id("com.github.johnrengelman.shadow") version "7.1.2"
-  id("org.sonarqube") version "3.4.0.2513"
+  id("com.gradleup.shadow") version "8.3.6"
+  id("org.sonarqube") version "6.1.0.5360"
 }
 
 repositories {
@@ -29,38 +29,27 @@ application {
 }
 
 dependencies {
-  implementation("org.hamcrest:hamcrest:2.2")
+  implementation("org.hamcrest:hamcrest:3.0")
   implementation("javax.help:javahelp:2.0.05")
-  implementation("com.fifesoft:rsyntaxtextarea:3.2.0")
+  implementation("com.fifesoft:rsyntaxtextarea:3.6.0")
   implementation("net.sf.nimrod:nimrod-laf:1.2")
-  implementation("org.drjekyll:colorpicker:1.4.3")
+  implementation("org.drjekyll:colorpicker:2.0.1")
   implementation("at.swimmesberger:swingx-core:1.6.8")
   implementation("org.scijava:swing-checkbox-tree:1.0.2")
-<<<<<<< HEAD
-  implementation("org.slf4j:slf4j-api:1.7.30")
-  implementation("org.slf4j:slf4j-simple:1.7.30")
-  implementation("com.formdev:flatlaf:1.2")
-  implementation("commons-cli:commons-cli:1.4")
-  implementation("com.vladsch.flexmark:flexmark-all:0.62.2")
-=======
-  implementation("org.slf4j:slf4j-api:2.0.0")
-  implementation("org.slf4j:slf4j-simple:2.0.0")
-  implementation("com.formdev:flatlaf:2.4")
-  implementation("commons-cli:commons-cli:1.5.0")
->>>>>>> 16419656c23f2540946a8528dfdd0b520d978e54
-  implementation("org.apache.commons:commons-text:1.9")
-
-  // NOTE: Do not upgrade the jflex version. Later versions do not work.
-  compileOnly("de.jflex:jflex:1.4.1")
+  implementation("org.slf4j:slf4j-api:2.0.17")
+  implementation("org.slf4j:slf4j-simple:2.0.17")
+  implementation("com.formdev:flatlaf:3.6")
+  implementation("commons-cli:commons-cli:1.9.0")
+  implementation("org.apache.commons:commons-text:1.13.1")
 
   // NOTE: Be aware of reported issues with Eclipse and Batik
   // See: https://github.com/logisim-evolution/logisim-evolution/issues/709
   // implementation("org.apache.xmlgraphics:batik-swing:1.14")
 
-  testImplementation(platform("org.junit:junit-bom:5.9.0"))
-  testImplementation("org.junit.jupiter:junit-jupiter:5.9.0")
-  testImplementation("org.mockito:mockito-inline:4.7.0")
-  testImplementation("org.mockito:mockito-junit-jupiter:4.7.0")
+  testImplementation(platform("org.junit:junit-bom:5.12.2"))
+  testImplementation("org.junit.jupiter:junit-jupiter:5.12.2")
+  testImplementation("org.mockito:mockito-junit-jupiter:5.17.0")
+  testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 /**
@@ -70,9 +59,14 @@ val APP_DIR_NAME = "appDirName"
 val APP_VERSION = "appVersion"
 val APP_VERSION_SHORT = "appVersionShort"
 val APP_URL = "appUrl"
+val BUILD_DIR = "buildDir"
+val JDEPS = "jdeps"
+val JDEPS_FILE = "jdepsFile"
 val JPACKAGE = "jpackage"
 val LIBS_DIR = "libsDir"
 val LINUX_PARAMS = "linuxParameters"
+val OS_ARCH = "osArch"
+val PACKAGE_INPUT_DIR = "packageInputDir"
 val SHADOW_JAR_FILE_NAME = "shadowJarFilename"
 val SHARED_PARAMS = "sharedParameters"
 val SUPPORT_DIR = "supportDir"
@@ -82,8 +76,8 @@ val TARGET_FILE_PATH_BASE_SHORT = "targetFilePathBaseShort"
 val UPPERCASE_PROJECT_NAME = "uppercaseProjectName"
 
 java {
-  sourceCompatibility = JavaVersion.VERSION_16
-  targetCompatibility = JavaVersion.VERSION_16
+  sourceCompatibility = JavaVersion.VERSION_21
+  targetCompatibility = JavaVersion.VERSION_21
 }
 
 /**
@@ -108,6 +102,14 @@ extra.apply {
   set(APP_VERSION_SHORT, appVersionShort)
   logger.info("appVersionShort: ${appVersionShort}")
 
+  // Architecture used for build
+  val osArch = System.getProperty("os.arch") ?: throw GradleException("os.arch is not set")
+  set(OS_ARCH, osArch)
+
+  // Build Directory
+  val buildDir = getLayout().getBuildDirectory().get().asFile.toString()
+  set(BUILD_DIR, buildDir)
+
   // Destination folder where packages are stored.
   val targetDir="${buildDir}/dist"
   set(TARGET_DIR, targetDir)
@@ -116,9 +118,17 @@ extra.apply {
   val libsDir="${buildDir}/libs"
   set(LIBS_DIR, libsDir)
 
+  // PackageInput folder that hold the shadowJar
+  val packageInputDir="${buildDir}/packageInput"
+  set(PACKAGE_INPUT_DIR, packageInputDir)
+
   // The root dir for jpackage extra files.
   val supportDir="${projectDir}/support/jpackage"
   set(SUPPORT_DIR, supportDir)
+
+  // Project name with uppercase first letter
+  val uppercaseProjectName = project.name.replaceFirstChar { it.uppercase() }.trim()
+  set(UPPERCASE_PROJECT_NAME, uppercaseProjectName)
 
   // Base name of produced artifacts. Suffixes will be added later by relevant tasks.
   val baseFilename = "${project.name}-${appVersion}"
@@ -138,6 +148,10 @@ extra.apply {
   val javaHome = System.getProperty("java.home") ?: throw GradleException("java.home is not set")
   val jpackage = "${javaHome}/bin/jpackage"
   set(JPACKAGE, jpackage)
+  val jdeps = "${javaHome}/bin/jdeps"
+  set(JDEPS, jdeps)
+  val jdepsFile = "${buildDir}/neededJavaModules.txt"
+  set(JDEPS_FILE, jdepsFile)
 
   // Copyrights note.
   val copyrights = "Copyright ©2001–${SimpleDateFormat("yyyy").format(Date())} ${project.name} developers"
@@ -148,11 +162,10 @@ extra.apply {
       // NOTE: we cannot use --app-version as part of platform agnostic set as i.e. both macOS and
       // Windows packages do not allow use of any suffixes like "-dev" etc, so --app-version is set
       // in these builders separately.
-      "--input", libsDir,
+      "--input", packageInputDir,
       "--main-class", "com.cburch.logisim.Main",
       "--main-jar", shadowJarFilename,
       "--copyright", copyrights,
-      "--dest", targetDir,
       "--description", "Digital logic design tool and simulator",
       "--vendor", "${project.name} developers",
   )
@@ -164,6 +177,7 @@ extra.apply {
   // Linux (DEB/RPM) specific settings for jpackage.
   val linuxParams = params + listOf(
       "--name", project.name,
+      "--dest", targetDir,
       "--app-version", appVersion,
       "--file-associations", "${supportDir}/linux/file.jpackage",
       "--icon", "${supportDir}/linux/logisim-icon-128.png",
@@ -173,23 +187,22 @@ extra.apply {
   set(LINUX_PARAMS, linuxParams)
 
   // All the macOS specific stuff.
-  val uppercaseProjectName = project.name.capitalize().trim()
-  set(UPPERCASE_PROJECT_NAME, uppercaseProjectName)
-  set(APP_DIR_NAME, "${targetDir}/${uppercaseProjectName}.app")
+  set(APP_DIR_NAME, "${buildDir}/macOS-${osArch}/${uppercaseProjectName}.app")
 }
 
 java {
   sourceSets["main"].java {
+    val buildDir = getLayout().getBuildDirectory().get().asFile
     srcDir("${buildDir}/generated/logisim/java")
     srcDir("${buildDir}/generated/sources/srcgen")
   }
 }
 
-task<Jar>("sourcesJar") {
+tasks.register<Jar>("sourcesJar") {
   group = "build"
   description = "Creates a JAR archive with project sources."
   dependsOn.add("classes")
-  classifier = "src"
+  archiveClassifier.set("src")
 
   from(sourceSets.main.get().allSource)
   archiveVersion.set(ext.get(APP_VERSION) as String)
@@ -198,60 +211,7 @@ task<Jar>("sourcesJar") {
 
 
 /**
- * Creates the distribution directory and removes any extra files from the libs directory
- * beyond the expected shadowJar file because jpackage puts everything from libs into the package.
- */
-tasks.register("createDistDir") {
-  val libsDir = ext.get(LIBS_DIR) as String
-
-  group = "build"
-  description = "Creates the directory for distribution."
-  dependsOn("shadowJar")
-
-  val shadowJarFilename = ext.get(SHADOW_JAR_FILE_NAME) as String
-
-  inputs.dir(libsDir)
-  outputs.dir(ext.get(TARGET_DIR) as String)
-
-  doFirst {
-    var jarFiles = File(libsDir).list()
-    var jarCount = jarFiles.count()
-
-    if ( jarCount > 1) {
-      logger.warn("Expected 1 shadowJar file, found ${jarCount} in: ${libsDir}")
-
-      val expectedShadowJar = File("${libsDir}/${shadowJarFilename}")
-      if (expectedShadowJar.exists()) {
-        logger.warn("Found needed: ${shadowJarFilename}")
-      }
-
-      for (file in jarFiles.filter { file -> file != shadowJarFilename }) {
-        logger.warn("Will remove: ${file}")
-      }
-    }
-  }
-
-  doLast {
-    val folder = File(libsDir)
-    if (!folder.exists() && !folder.mkdirs()) {
-      throw GradleException("Unable to create directory: ${folder.absolutePath}")
-    }
-
-    var jarFiles = File(libsDir).list()
-    var jarCount = jarFiles.count()
-    if ( jarCount > 1) {
-      // Value of shadowJarFileName is our needed JAR file. Remove the rest.
-      for (file in jarFiles.filter { file -> file != shadowJarFilename }) {
-        if (!delete("${libsDir}/${file}")) {
-          throw GradleException("Failed to remove orphaned file: ${file}")
-        }
-      }
-    }
-  }
-}
-
-/**
- * Helper method that simplifies runining external commands using ProcessBuilder().
+ * Helper method that simplifies running external commands using ProcessBuilder().
  * Will throw GradleException on command failure (non-zero return code).
  *
  * params: List of strings which signifies the external program file to be invoked and its arguments (if any).
@@ -281,11 +241,110 @@ fun runCommand(params: List<String>, exceptionMsg: String): String {
   if (rc != 0) {
     logger.error(proc.errorStream.bufferedReader().readText().trim())
     logger.error("Command \"${params[0]}\" failed with RC ${rc}.")
-    var exMsg = exceptionMsg ?: ""
-    throw GradleException(exMsg)
+    throw GradleException(exceptionMsg)
   }
 
   return proc.inputStream.bufferedReader().readText().trim()
+}
+
+/**
+ * Helper function to remove all contents from the given directory
+*/
+fun deleteDirectoryContents(directory: String) {
+  for (file in File(directory).list()) {
+    if (!delete("${directory}/${file}")) {
+      throw GradleException("Failed to remove old file: ${directory}${file}")
+    }
+  }
+}
+
+/**
+ * Helper function to verify the distribution file now exists in build/dist.
+ * It issues a warning if it does not and also lists the contents of its directory.
+*/
+fun verifyFileExists(filename: String) {
+  var theFile = File(filename)
+  if (theFile.isFile()) {
+    return
+  }
+  logger.warn("*** WARNING ***");
+  logger.warn("File does not exist: ${filename}")
+  var parentDir = theFile.getParentFile();
+  if (parentDir != null && parentDir.isDirectory()) {
+    logger.warn("Directory actually contains:")
+    for (file in parentDir.list()) {
+      logger.warn("  ${file}")
+    }
+  } else {
+    logger.warn("Parent directory does not exist: ${parentDir}");
+  }
+}
+
+/**
+ * Function that returns the named parameters list plus the --adds-modules option
+ */
+fun addNeededModulesTo(parametersName: String): List<String> {
+  val fileName = ext.get(JDEPS_FILE) as String
+  val file = File(fileName)
+  if (!file.isFile()) {
+    throw GradleException("No ${fileName} exists")
+  }
+  val dependencies = File(fileName).readLines()[0]
+  val addModules = listOf("--add-modules", dependencies)
+  return (ext.get(parametersName) as List<Any?>).filterIsInstance<String>() + addModules
+}
+
+/**
+ * Task createNeededJavaModules
+ *
+ * Uses jdeps to create a file containing a list of the needed Java modules.
+ */
+tasks.register("createNeededJavaModules") {
+  group = "build"
+  description = "Creates a file containing the jdeps dependencies"
+  dependsOn("shadowJar")
+  val libsDir = ext.get(LIBS_DIR) as String
+  val shadowJarFilename = ext.get(SHADOW_JAR_FILE_NAME) as String
+  val jarFileName = "${libsDir}/${shadowJarFilename}"
+  val outFileName = ext.get(JDEPS_FILE) as String
+  inputs.file(jarFileName)
+  outputs.file(outFileName)
+
+  doLast {
+    val cmd = listOf(ext.get(JDEPS) as String, "--print-module-deps", "--ignore-missing-deps", jarFileName)
+    val neededJavaModules = runCommand(cmd, "Error while finding Java dependencies with jdeps.")
+    File(outFileName).writeText(neededJavaModules)
+    verifyFileExists(outFileName)
+  }
+}
+
+/**
+ * Task createPackageInput
+ *
+ * Creates a packageInput directory containing only the current shadowJar file
+ * because jpackage includes everything in its input directory in the package.
+ */
+tasks.register("createPackageInput") {
+  group = "build"
+  description = "Creates a packageInput directory that only contains the current shadowJar file"
+  dependsOn("shadowJar")
+  val libsDir = ext.get(LIBS_DIR) as String
+  val shadowJarFilename = ext.get(SHADOW_JAR_FILE_NAME) as String
+  val packageInputDir = ext.get(PACKAGE_INPUT_DIR) as String
+  inputs.file("${libsDir}/${shadowJarFilename}")
+  outputs.dir(packageInputDir)
+
+  doLast {
+    deleteDirectoryContents(packageInputDir)
+    val copyReturn = copy {
+      from(libsDir)
+      into(packageInputDir)
+      include(shadowJarFilename)
+    }
+    if (!copyReturn.didWork) {
+      throw GradleException("createPackageInput failed to copy: ${shadowJarFilename}")
+    }
+  }
 }
 
 /**
@@ -296,16 +355,17 @@ fun runCommand(params: List<String>, exceptionMsg: String): String {
 tasks.register("createDeb") {
   group = "build"
   description = "Makes DEB Linux installation package."
-  dependsOn("shadowJar", "createDistDir")
-  inputs.dir(ext.get(LIBS_DIR) as String)
+  dependsOn("createPackageInput", "createNeededJavaModules")
+  inputs.dir(ext.get(PACKAGE_INPUT_DIR) as String)
   inputs.dir("${ext.get(SUPPORT_DIR) as String}/linux")
+  inputs.file(ext.get(JDEPS_FILE) as String)
 
   // Debian uses `_` to separate name from version string.
   // https://www.debian.org/doc/manuals/debian-faq/pkg-basics.en.html
   val appVersion = ext.get(APP_VERSION) as String
   val targetDir = ext.get(TARGET_DIR) as String
-  val debPackagePath = "${targetDir}/${project.name}_${appVersion}-1_amd64.deb"
-  outputs.file(debPackagePath)
+  val outputFile = "${targetDir}/${project.name}_${appVersion}_amd64.deb"
+  outputs.file(outputFile)
 
   doFirst {
     if (!OperatingSystem.current().isLinux) {
@@ -314,8 +374,9 @@ tasks.register("createDeb") {
   }
 
   doLast {
-    val params = ext.get(LINUX_PARAMS) as List<String> + listOf("--type", "deb")
+    val params = addNeededModulesTo(LINUX_PARAMS) + listOf("--type", "deb")
     runCommand(params, "Error while creating the DEB package.")
+    verifyFileExists(outputFile);
   }
 }
 
@@ -327,10 +388,12 @@ tasks.register("createDeb") {
 tasks.register("createRpm") {
   group = "build"
   description = "Makes RPM Linux installation package."
-  dependsOn("shadowJar", "createDistDir")
-  inputs.dir(ext.get(LIBS_DIR) as String)
+  dependsOn("createPackageInput", "createNeededJavaModules")
+  inputs.dir(ext.get(PACKAGE_INPUT_DIR) as String)
   inputs.dir("${ext.get(SUPPORT_DIR) as String}/linux")
-  outputs.file("${ext.get(TARGET_FILE_PATH_BASE) as String}-1.x86_64.rpm")
+  inputs.file(ext.get(JDEPS_FILE) as String)
+  var outputFile = "${ext.get(TARGET_FILE_PATH_BASE) as String}-1.x86_64.rpm"
+  outputs.file(outputFile);
 
   doFirst {
     if (!OperatingSystem.current().isLinux) {
@@ -339,26 +402,31 @@ tasks.register("createRpm") {
   }
 
   doLast {
-    val params = ext.get(LINUX_PARAMS) as List<String> + listOf("--type", "rpm")
+    val params = addNeededModulesTo(LINUX_PARAMS) + listOf("--type", "rpm")
     runCommand(params, "Error while creating the RPM package.")
+    verifyFileExists(outputFile);
   }
 }
 
 /**
  * Task: createMsi
  *
- * Creates MSI installater file for Microsoft Windows.
+ * Creates MSI installer file for Microsoft Windows.
  */
 tasks.register("createMsi") {
   group = "build"
   description = "Makes the Windows installation package."
-  dependsOn("shadowJar", "createDistDir")
+  dependsOn("createPackageInput", "createNeededJavaModules")
 
-  val supportDir = ext.get(SUPPORT_DIR) as String;
+  val supportDir = ext.get(SUPPORT_DIR) as String
+  val osArch = ext.get(OS_ARCH) as String
+  val projectName = project.name
 
-  inputs.dir(ext.get(LIBS_DIR) as String)
+  inputs.dir(ext.get(PACKAGE_INPUT_DIR) as String)
   inputs.dir("${supportDir}/windows")
-  outputs.file("${ext.get(TARGET_FILE_PATH_BASE_SHORT) as String}.msi")
+  inputs.file(ext.get(JDEPS_FILE) as String)
+  var outputFile = "${ext.get(TARGET_FILE_PATH_BASE_SHORT) as String}-${osArch}.msi"
+  outputs.file(outputFile);
 
   doFirst {
     if (!OperatingSystem.current().isWindows) {
@@ -367,11 +435,14 @@ tasks.register("createMsi") {
   }
 
   doLast {
-    val params = ext.get(SHARED_PARAMS) as List<String> + listOf(
-        "--name", project.name,
+    val targetDir = ext.get(TARGET_DIR) as String
+    val version = ext.get(APP_VERSION_SHORT) as String
+    val params = addNeededModulesTo(SHARED_PARAMS) + listOf(
+        "--name", projectName,
+        "--dest", targetDir,
         "--file-associations", "${supportDir}/windows/file.jpackage",
         "--icon", "${supportDir}/windows/Logisim-evolution.ico",
-        "--win-menu-group", project.name as String,
+        "--win-menu-group", projectName,
         "--win-shortcut",
         "--win-dir-chooser",
         "--win-menu",
@@ -379,10 +450,92 @@ tasks.register("createMsi") {
         // we MUST use short version form (without any suffix like "-dev", as it is not allowed in MSI package:
         // https://docs.microsoft.com/en-us/windows/win32/msi/productversion?redirectedfrom=MSDN
         // NOTE: any change to version **format** may require editing of .github/workflows/nightly.yml too!
-        "--app-version", ext.get(APP_VERSION_SHORT) as String,
+        "--app-version", version,
     )
     runCommand(params, "Error while creating the MSI package.")
+    val fromFile = "${projectName}-${version}.msi"
+    val copyReturn = copy {
+      from(targetDir)
+      into(targetDir)
+      include(fromFile)
+      rename(fromFile, "${projectName}-${version}-${osArch}.msi")
+    }
+    if (!copyReturn.didWork) {
+      throw GradleException("createMsi failed to rename .msi file to include architecture ${osArch}")
+    }
+    delete("${targetDir}/${fromFile}")
+    verifyFileExists(outputFile);
   }
+}
+
+
+/**
+ * Task: createExe
+ *
+ * Creates an executable for Windows.
+ */
+tasks.register("createExe") {
+  group = "build"
+  description = "Creates the executable for Windows"
+  dependsOn("createPackageInput", "createNeededJavaModules")
+
+  val supportDir = ext.get(SUPPORT_DIR) as String
+  val buildDir = ext.get(BUILD_DIR) as String
+  val osArch = ext.get(OS_ARCH) as String
+  val projectName = project.name
+  val dest = "${buildDir}/windows-${osArch}"
+
+
+  inputs.dir(ext.get(PACKAGE_INPUT_DIR) as String)
+  inputs.dir("${supportDir}/windows")
+  inputs.file(ext.get(JDEPS_FILE) as String)
+  outputs.dir("$dest/$projectName")
+
+  doFirst {
+    if (!OperatingSystem.current().isWindows) {
+      throw GradleException("This task runs on Windows only.")
+    }
+  }
+
+  doLast {
+    deleteDirectoryContents(dest)
+    val version = ext.get(APP_VERSION_SHORT) as String
+    val params = addNeededModulesTo(SHARED_PARAMS) + listOf(
+        "--name", projectName,
+        "--dest", dest,
+        "--icon", "${supportDir}/windows/Logisim-evolution.ico",
+        "--type", "app-image",
+        // we MUST use short version form (without any suffix like "-dev", as it is not allowed in MSI package:
+        // https://docs.microsoft.com/en-us/windows/win32/msi/productversion?redirectedfrom=MSDN
+        // NOTE: any change to version **format** may require editing of .github/workflows/nightly.yml too!
+        "--app-version", version,
+    )
+    runCommand(params, "Error while creating the Windows executable.")
+    verifyFileExists("${dest}/${projectName}/${projectName}.exe")
+  }
+}
+
+/**
+ * Task: createWindowsPortableZip
+ *
+ * Create a self-contained archive for Windows.
+ */
+tasks.register<Zip>("createWindowsPortableZip") {
+  group = "build"
+  description = "Makes the self-contained zip archive for Windows"
+
+  val inputFiles = tasks.getByName("createExe").outputs.files
+
+  dependsOn("createExe")
+  from(inputFiles)
+
+  val osArch = ext.get(OS_ARCH) as String
+  val version = ext.get(APP_VERSION) as String
+  val targetDir = ext.get(TARGET_DIR) as String
+  val projectName = project.name
+
+  archiveFileName = "${projectName}-${version}-windows-${osArch}.zip"
+  destinationDirectory.set(file(targetDir))
 }
 
 /**
@@ -392,14 +545,17 @@ tasks.register("createMsi") {
  */
 tasks.register("createApp") {
   val supportDir = ext.get(SUPPORT_DIR) as String
-  val appDirName = ext.get(APP_DIR_NAME) as String
+  val buildDir = ext.get(BUILD_DIR) as String
+  val arch = ext.get(OS_ARCH) as String
+  val dest = "${buildDir}/macOS-${arch}"
 
   group = "build"
   description = "Makes the macOS application."
-  dependsOn("shadowJar", "createDistDir")
-  inputs.dir(ext.get(LIBS_DIR) as String)
+  dependsOn("createPackageInput", "createNeededJavaModules")
+  inputs.dir(ext.get(PACKAGE_INPUT_DIR) as String)
   inputs.dir("${supportDir}/macos")
-  outputs.dir(appDirName)
+  inputs.file(ext.get(JDEPS_FILE) as String)
+  outputs.dir(dest)
 
   doFirst {
     if (!OperatingSystem.current().isMacOsX) {
@@ -408,40 +564,41 @@ tasks.register("createApp") {
   }
 
   doLast {
-    delete(appDirName)
-
-    var params = ext.get(SHARED_PARAMS) as List<String>
-    params += listOf(
+    deleteDirectoryContents(dest)
+    val params = addNeededModulesTo(SHARED_PARAMS) + listOf(
+        "--dest", dest,
         "--name", ext.get(UPPERCASE_PROJECT_NAME) as String,
         "--file-associations", "${supportDir}/macos/file.jpackage",
         "--icon", "${supportDir}/macos/Logisim-evolution.icns",
         // app versioning is strictly checked for macOS. No suffix allowed for `app-image` type.
         "--app-version", ext.get(APP_VERSION_SHORT) as String,
         "--type", "app-image",
+        "--mac-app-category", "education"
     )
     runCommand(params, "Error while creating the .app directory.")
 
-    val targetDir = ext.get(TARGET_DIR) as String
-    val pListFilename = "${appDirName}/Contents/Info.plist"
-    runCommand(listOf(
-        "awk",
-        "/Unknown/{sub(/Unknown/,\"public.app-category.education\")};"
-            + "/utilities/{sub(/public.app-category.utilities/,\"public.app-category.education\")};"
-            + "{print >\"${targetDir}/Info.plist\"};"
-            + "/NSHighResolutionCapable/{"
-            + "print \"  <string>true</string>\" >\"${targetDir}/Info.plist\";"
-            + "print \"  <key>NSSupportsAutomaticGraphicsSwitching</key>\" >\"${targetDir}/Info.plist\""
-            + "}",
-        pListFilename,
-    ), "Error while patching Info.plist file.")
+    val appDirName = ext.get(APP_DIR_NAME) as String
+    if ("x86_64".equals(arch)) {
+      val pListFilename = "${appDirName}/Contents/Info.plist"
+      val tempPList = "${dest}/Info.plist"
+      runCommand(listOf(
+          "awk",
+          "{print >\"${tempPList}\"};"
+              + "/NSHighResolutionCapable/{"
+              + "print \"  <string>true</string>\" >\"${tempPList}\";"
+              + "print \"  <key>NSSupportsAutomaticGraphicsSwitching</key>\" >\"${tempPList}\""
+              + "}",
+          pListFilename,
+      ), "Error while patching Info.plist file.")
 
-    runCommand(listOf(
-        "mv", "${targetDir}/Info.plist", pListFilename
-    ), "Error while moving Info.plist into the .app directory.")
+      runCommand(listOf(
+          "mv", tempPList, pListFilename
+      ), "Error while moving Info.plist into the .app directory.")
 
-    runCommand(listOf(
-        "codesign", "--force", "--sign", "-", appDirName
-    ), "Error while executing: codesign")
+      runCommand(listOf(
+          "codesign", "--force", "--sign", "-", appDirName
+      ), "Error while executing: codesign")
+    }
   }
 }
 
@@ -456,9 +613,13 @@ tasks.register("createDmg") {
   dependsOn("createApp")
 
   val appDirName = ext.get(APP_DIR_NAME) as String
+  val osArch = ext.get(OS_ARCH) as String
+  val projectName = project.name
 
   inputs.dir(appDirName)
-  outputs.file(ext.get(TARGET_FILE_PATH_BASE) as String + ".dmg")
+
+  val outputFile = "${ext.get(TARGET_FILE_PATH_BASE) as String}-${osArch}.dmg"
+  outputs.file(outputFile);
 
   doFirst {
     if (!OperatingSystem.current().isMacOsX) {
@@ -470,13 +631,15 @@ tasks.register("createDmg") {
     val params = listOf(
         ext.get(JPACKAGE) as String,
         "--app-image", appDirName,
-        "--name", project.name,
+        "--name", projectName,
         // We can pass full version here, even if contains suffix part too.
-        "--app-version", ext.get(APP_VERSION) as String,
+        // We also append the architecture to add it to the package name.
+        "--app-version", "${ext.get(APP_VERSION) as String}-${osArch}",
         "--dest", ext.get(TARGET_DIR) as String,
         "--type", "dmg",
       )
     runCommand(params, "Error while creating the DMG package")
+    verifyFileExists(outputFile);
   }
 }
 
@@ -501,7 +664,7 @@ fun genBuildInfo(buildInfoFilePath: String) {
   val currentMillis = Date().time
   val buildYear = SimpleDateFormat("yyyy").format(now)
   val appVersion = ext.get(APP_VERSION) as String
-  val projectName = project.name.capitalize().trim()
+  val projectName = ext.get(UPPERCASE_PROJECT_NAME) as String
   val displayName = "${projectName} v${appVersion}"
   val url = ext.get(APP_URL) as String
 
@@ -558,6 +721,7 @@ fun genBuildInfo(buildInfoFilePath: String) {
  */
 tasks.register("genBuildInfo") {
   // Target location for generated files.
+  val buildDir = ext.get(BUILD_DIR) as String
   val buildInfoDir = "${buildDir}/generated/logisim/java/com/cburch/logisim/generated"
 
   group = "build"
@@ -576,52 +740,6 @@ tasks.register("genBuildInfo") {
 }
 
 /**
- * Task genVhdlSyntax
- *
- * Generates the VhdlSyntax.java file
-*/
-tasks.register("genVhdlSyntax") {
-  val sourceFile = "${projectDir}/src/main/jflex/com/cburch/logisim/vhdl/syntax/VhdlSyntax.jflex"
-  val skeletonFile = "${projectDir}/support/jflex/skeleton.default"
-  val targetDir = "${buildDir}/generated/logisim/java/com/cburch/logisim/vhdl/syntax/"
-
-  group = "build"
-  description = "Generates VhdlSyntax.java"
-  inputs.files(sourceFile)
-  inputs.files(skeletonFile)
-  outputs.dir(targetDir)
-
-  var jflexJarFileName = ""
-
-  doFirst() {
-    configurations.compileClasspath {
-      resolvedConfiguration.resolvedArtifacts.forEach { ra: ResolvedArtifact ->
-        val id = ra.moduleVersion.id
-        if ("de.jflex".equals(id.group) && "jflex".equals(id.name)) {
-          jflexJarFileName = ra.file.toString()
-        }
-      }
-    }
-    if (jflexJarFileName.isEmpty()) {
-      throw GradleException("Could not find jflex jar file.")
-    }
-  }
-
-  doLast() {
-    logging.captureStandardOutput(LogLevel.DEBUG)
-    javaexec {
-      classpath = files(jflexJarFileName)
-      args = listOf(
-          "--nobak",
-          "-d", targetDir,
-          "--skel", skeletonFile,
-          sourceFile
-      )
-    }
-  }
-}
-
-/**
  * Task: genFiles
  *
  * Umbrella task to generate all generated files
@@ -629,7 +747,7 @@ tasks.register("genVhdlSyntax") {
 tasks.register("genFiles") {
   group = "build"
   description = "Generates all generated files."
-  dependsOn("genBuildInfo", "genVhdlSyntax")
+  dependsOn("genBuildInfo")
 }
 
 /**
@@ -646,6 +764,7 @@ tasks.register("createAll") {
   }
   if (OperatingSystem.current().isWindows) {
     dependsOn("createMsi")
+    dependsOn("createWindowsPortableZip")
   }
   if (OperatingSystem.current().isMacOsX) {
     dependsOn("createDmg")
@@ -720,13 +839,13 @@ tasks {
     // let's use google_checks.xml config provided with Checkstyle.
     // https://stackoverflow.com/a/67513272/1235698
     val archive = configurations.checkstyle.get().resolve().filter {
-      name.startsWith("checkstyle")
+      it.name.startsWith("checkstyle")
     }
     config = resources.text.fromArchiveEntry(archive, "google_checks.xml")
 
     // FIXME: There should be cleaner way of using custom suppression config with built-in style.
     // https://stackoverflow.com/a/64703619/1235698
-    System.setProperty( "org.checkstyle.google.suppressionfilter.config", "${projectDir}/config/checkstyle/suppressions.xml")
+    System.setProperty( "org.checkstyle.google.suppressionfilter.config", "${projectDir}/checkstyle-suppressions.xml")
   }
   checkstyleMain {
     source = fileTree("src/main/java")
